# newsfeed

./: .gitignore  DESIGN.md  README.md  archive.html  config.yaml  index.html  main.py  pyproject.toml  requirements.txt
.github/workflows/: generate-digest.yml
archive/: 2025-10-19.html  2025-10-20.html  2025-10-21.html  2025-10-22.html  2025-10-23.html  2025-10-24.html  2025-10-25.html  2025-10-26.html  2025-10-27.html  2025-10-28.html  2025-10-29.html  2025-10-30.html  2025-10-31.html  2025-11-01.html  2025-11-02.html  2025-11-03.html  2025-11-04.html  2025-11-05.html  2025-11-06.html  2025-11-07.html  2025-11-08.html  2025-11-09.html  2025-11-10.html  2025-11-11.html  2025-11-12.html  2025-11-13.html  2025-11-14.html  2025-11-15.html  2025-11-16.html  2025-11-17.html  2025-11-18.html  2025-11-19.html  2025-11-20.html  2025-11-21.html  2025-11-22.html  2025-11-23.html  2025-11-24.html  2025-11-25.html  2025-11-26.html  2025-11-27.html  (+119 more)
src/: __init__.py  archive_manager.py  html_generator.py  summarizer.py
src/fetchers/: __init__.py  hackernews_fetcher.py  hatena_fetcher.py  reddit_fetcher.py
